--- a/templates/guests/index.html.twig
+++ b/templates/guests/index.html.twig
@@ -4,46 +4,49 @@
 
 {% block body %}
     <form action="/room/type/" style="float: left">
-        <input type="submit" name="action" value="Типы комнат">
+        <input class="buttonTable" type="submit" name="action" value="Типы комнат" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/settling/room" style="float: left">
-        <input type="submit" name="action" value="Даты">
+    <form action="/rooms/" style="float: left">
+        <input type="submit" name="action" value="Комнаты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <form action="/hotel/staff/" style="float: left">
-        <input type="submit" name="action" value="Сотрудники">
+        <input type="submit" name="action" value="Сотрудники" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/rooms/">
-        <input type="submit" name="action" value="Комнаты">
+    <form action="/guests/" style="float: left">
+        <input type="submit" name="action" value="Гости" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
+    </form>
+    <form action="/settling/room/">
+        <input type="submit" name="action" value="Даты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <h1>Гости</h1>
 
-    <table class="table">
+    <table class="table" style="border-collapse: collapse; border: 1px solid gray; width: 700px;">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Номер паспорта</th>
-                <th>ФИО</th>
-                <th>Гражданство</th>
-                <th>Тип гостя</th>
-                <th>Действия</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ID</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Номер паспорта</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ФИО</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Гражданство</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Тип гостя</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Действия</th>
             </tr>
         </thead>
         <tbody>
         {% for guest in guests %}
             <tr>
-                <td>{{ guest.id }}</td>
-                <td>{{ guest.PassportNum }}</td>
-                <td>{{ guest.FIO }}</td>
-                <td>{{ guest.CitizenShip }}</td>
-                <td>{{ guest.TypeGuests }}</td>
-                <td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ guest.id }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ guest.PassportNum }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ guest.FIO }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ guest.CitizenShip }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ guest.TypeGuests }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">
                     <a href="{{ path('app_guests_show', {'id': guest.id}) }}">show</a>
                     <a href="{{ path('app_guests_edit', {'id': guest.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6" style="padding: 3px;border: 1px solid ;text-align: center;">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
