--- a/templates/hotel_staff/index.html.twig
+++ b/templates/hotel_staff/index.html.twig
@@ -4,46 +4,49 @@
 
 {% block body %}
     <form action="/room/type/" style="float: left">
-        <input type="submit" name="action" value="Типы комнат">
+        <input class="buttonTable" type="submit" name="action" value="Типы комнат" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/settling/room" style="float: left">
-        <input type="submit" name="action" value="Даты">
+    <form action="/rooms/" style="float: left">
+        <input type="submit" name="action" value="Комнаты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
+    </form>
+    <form action="/hotel/staff/" style="float: left">
+        <input type="submit" name="action" value="Сотрудники" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <form action="/guests/" style="float: left">
-        <input type="submit" name="action" value="Гости">
+        <input type="submit" name="action" value="Гости" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/rooms/">
-        <input type="submit" name="action" value="Комнаты">
+    <form action="/settling/room/">
+        <input type="submit" name="action" value="Даты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <h1>Сотрудники</h1>
 
-    <table class="table">
+    <table class="table" style="border-collapse: collapse; border: 1px solid gray; width: 700px;">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>ID Сотрудника</th>
-                <th>ФИО</th>
-                <th>Зарплата</th>
-                <th>Рабочий график</th>
-                <th>Действия</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ID</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ID Сотрудника</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ФИО</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Зарплата</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Рабочий график</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Действия</th>
             </tr>
         </thead>
         <tbody>
         {% for hotel_staff in hotel_staffs %}
             <tr>
-                <td>{{ hotel_staff.id }}</td>
-                <td>{{ hotel_staff.StaffID }}</td>
-                <td>{{ hotel_staff.FIO }}</td>
-                <td>{{ hotel_staff.Salary }}</td>
-                <td>{{ hotel_staff.WorkShedule }}</td>
-                <td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ hotel_staff.id }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ hotel_staff.StaffID }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ hotel_staff.FIO }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ hotel_staff.Salary }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ hotel_staff.WorkShedule }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">
                     <a href="{{ path('app_hotel_staff_show', {'id': hotel_staff.id}) }}">show</a>
                     <a href="{{ path('app_hotel_staff_edit', {'id': hotel_staff.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6" style="padding: 3px;border: 1px solid ;text-align: center;">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
