--- a/templates/settling_room/index.html.twig
+++ b/templates/settling_room/index.html.twig
@@ -4,42 +4,45 @@
 
 {% block body %}
     <form action="/room/type/" style="float: left">
-        <input type="submit" name="action" value="Типы комнат">
+        <input class="buttonTable" type="submit" name="action" value="Типы комнат" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
+    </form>
+    <form action="/rooms/" style="float: left">
+        <input type="submit" name="action" value="Комнаты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <form action="/hotel/staff/" style="float: left">
-        <input type="submit" name="action" value="Сотрудники">
+        <input type="submit" name="action" value="Сотрудники" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <form action="/guests/" style="float: left">
-        <input type="submit" name="action" value="Гости">
+        <input type="submit" name="action" value="Гости" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/rooms/">
-        <input type="submit" name="action" value="Комнаты">
+    <form action="/settling/room/">
+        <input type="submit" name="action" value="Даты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
     <h1>Даты</h1>
 
-    <table class="table">
+    <table class="table" style="border-collapse: collapse; border: 1px solid gray; width: 700px;">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Дата заезда</th>
-                <th>Дата выезда</th>
-                <th>Действия</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">ID</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Дата заезда</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Дата выезда</th>
+                <th style="border: 1px solid grey; background-color: #80bdff; color: white; text-align: center; width: 100px">Действия</th>
             </tr>
         </thead>
         <tbody>
         {% for settling_room in settling_rooms %}
             <tr>
-                <td>{{ settling_room.id }}</td>
-                <td>{{ settling_room.SetDate ? settling_room.SetDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ settling_room.DepartureDate ? settling_room.DepartureDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ settling_room.id }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ settling_room.SetDate ? settling_room.SetDate|date('Y-m-d H:i:s') : '' }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">{{ settling_room.DepartureDate ? settling_room.DepartureDate|date('Y-m-d H:i:s') : '' }}</td>
+                <td style="padding: 3px;border: 1px solid ;text-align: center;">
                     <a href="{{ path('app_settling_room_show', {'id': settling_room.id}) }}">show</a>
                     <a href="{{ path('app_settling_room_edit', {'id': settling_room.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4" style="padding: 3px;border: 1px solid ;text-align: center;">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
