--- a/templates/hotel_staff/index.html.twig
+++ b/templates/hotel_staff/index.html.twig
@@ -15,8 +15,11 @@
     <form action="/guests/" style="float: left">
         <input type="submit" name="action" value="Гости" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
     </form>
-    <form action="/settling/room/">
+    <form action="/settling/room/" style="float: left">
         <input type="submit" name="action" value="Даты" style="width: 125px; height: 30px; font-size: 14px; background-color: #0f6674; color: white">
+    </form>
+    <form action="/login" style="margin-left: 94%">
+        <input type="submit" name="action" value="Выйти" style="width: 100px; height: 30px; font-size: 14px; background-color: brown; color: white">
     </form>
     <h1>Сотрудники</h1>
 
